karl package Changelog
======================

Unreleased
----------

- The "Settings" page of the existing calendar has been temporarily
  hidden on the UI until the new calendar is finished.  Requested
  by Jason Lantz to prevent confusion.

- LP #430037 In karl.content.adapters, use functions in
  ``karl.utilities.converters`` instead of an xslt-using function
  named ``_html_cleaner``.  The ``_html_cleaner`` was producing
  incorrect results when fed HTML provided by the rich text input
  widget.

- Moved "karl.content" into this package (as the content subdirectory).

- LP #418687 Add better looking status messages

- LP #418701 Add better styling of form buttons

- LP #356541 Added better icons for file/folder listings including Folder, 
  Reference Manual, Page, Calendar Event, and News items. 

- Updated edit_acl view to allow workflow transitions, including re-inserting
  an object with a previously customized acl back into a proper workflow state.

- LP #426385 Added a few extra parameters to template call for
  admin_edit_profile view.  Extra paramaters used by OSI custom template.

3.14 (2009-09-08)
-----------------

- Hide all states in workflow UI that aren't current and have no valid
  exit transitions.

- Fixed error message in error page middleware.

- Merged 'chrism_workflow' branch.

- LP #418695 Bold communities for which logged in user is moderator in "My
  communities" portlet.

- LP #422571 Added convert_entities function to karl.views.utils.  Updated atom
  entry adapters to convert entities in content.

- LP #422572 Made some changes to atom feed based on feed validator
  recommendations: Added "updated" element to feed.  Added rel="self" attribute
  to "link" elements.

- Fixed bug discovered in alert digests--email recipients were not being
  properly passed as a list.  Digests could not have worked at all.  Surprised
  there was no bug report.  (15 users in OSI have alert preferences set to
  digest.)
