@@ -23,10 +23,6 @@
         </th>
       </tr>
   
-      <tr class="cal_agenda_range">
-        <td colspan="2"><a href="${calendar.earlier_events_url}">View earlier events</a></td>
-      </tr> 
-
       <tr tal:repeat="day calendar.days" class="cal_agenda_day ${day.shade_class}">
         <th><a href="${day.show_day_url}">${day.day_in_words}</a></th>
 
@@ -63,10 +59,6 @@
             </div>
           </div>
         </td>
-      </tr>
-      
-      <tr class="cal_agenda_range">
-        <td colspan="2"><a href="${calendar.later_events_url}">View later events</a></td>
       </tr>
       
     </table>
