@@ -4,6 +4,10 @@ karl package Changelog
 Unreleased
 ----------
 
+- Removed the "View Earlier Events" and "View Later Events" from
+  the list view on the new calendar.  These duplicate the functions
+  of the forward/backward buttons and are not necessary.  
+
 - The "Settings" page of the existing calendar has been temporarily
   hidden on the UI until the new calendar is finished.  Requested
   by Jason Lantz to prevent confusion.
